syntax = "proto3";

package proto;

option java_package = "com.hederahashgraph.api.proto.java";
option java_multiple_files = true;

import "google/protobuf/wrappers.proto";
import "BasicTypes.proto";
import "Duration.proto";
import "Timestamp.proto";

// All fields left null will not be updated.
// See [ConsensusService.updateTopic()](#proto.ConsensusService)
message ConsensusUpdateTopicTransactionBody {
    TopicID topicID = 1;

    // Short publicly visible memo about the topic. No guarantee of uniqueness. Null for "do not update".
    google.protobuf.StringValue memo = 2;

    Timestamp validStartTime = 3 [deprecated = true]; // Deprecated and to be removed before HCS release.

    // Effective consensus timestamp at (and after) which all consensus transactions and queries will fail.
    // The expirationTime may be no longer than MAX_AUTORENEW_PERIOD (8000001 seconds) from the consensus timestamp of
    // this transaction.
    // On topics with no adminKey, extending the expirationTime is the only updateTopic option allowed on the topic.
    // If unspecified, no change.
    Timestamp expirationTime = 4;

    // Access control for update/delete of the topic.
    // If unspecified, no change.
    // If empty keyList - the adminKey is cleared.
    Key adminKey = 6;

    // Access control for ConsensusService.submitMessage.
    // If unspecified, no change.
    // If empty keyList - the submitKey is cleared.
    Key submitKey = 7;

    // The amount of time to extend the topic's lifetime automatically at expirationTime if the autoRenewAccount is
    // configured and has funds (once autoRenew functionality is supported by HAPI).
    // Limited to between MIN_AUTORENEW_PERIOD (6999999 seconds) and MAX_AUTORENEW_PERIOD (8000001 seconds) by
    // servers-side configuration (which may change).
    // If unspecified, no change.
    Duration autoRenewPeriod = 8;

    // Optional account to be used at the topic's expirationTime to extend the life of the topic.
    // Once autoRenew functionality is supported by HAPI, the topic lifetime will be extended up to a maximum of the
    // autoRenewPeriod or however long the topic can be extended using all funds on the account (whichever is the
    // smaller duration/amount).
    // If specified as the default value (0.0.0), the autoRenewAccount will be removed.
    // If unspecified, no change.
    AccountID autoRenewAccount = 9;
}
